@@ -282,10 +282,10 @@ public class HttpShardHandlerFactory extends ShardHandlerFactory
 
     this.defaultClient =
         new Http2SolrClient.Builder()
-            .connectionTimeout(connectionTimeout)
-            .idleTimeout(soTimeout)
+            .withConnectionTimeout(connectionTimeout)
+            .withIdleTimeout(soTimeout)
             .withExecutor(commExecutor)
-            .maxConnectionsPerHost(maxConnectionsPerHost)
+            .withMaxConnectionsPerHost(maxConnectionsPerHost)
             .build();
     this.defaultClient.addListenerFactory(this.httpListenerFactory);
     this.loadbalancer = new LBHttp2SolrClient.Builder(defaultClient).build();
